--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,19 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@theme {
+  --color-primary: #E19859;
+  --color-primary-hover: #C97F46;
+  --color-primary-dim: #FFF5EC;
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  --font-hand-writing: "Beth Ellen", "sans-serif"; 
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-secondary: #FFA3A14D;
+  --color-secondary-outline: #FFA3A1;
+  --color-secondary-hover: #E84A47;
+
+  --color-tertiary: ##FFA3A138;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
